# discord-bot

./: .gitignore  README.md  audio_downloader.py  bot.py  music_player.py  opgg.html  pyproject.toml  requirements.txt
data/: csgo-lineups.json  csgo-linups.json  names.json  p_urls.json
discord_bot/: bot.py  csgo_utils.py  logging_utils.py  message_listener.py  music_player.py
scripts/: update_nsfw_gif_urls.py
src/: bot.py  csgo_lineups.py  csgo_utility.py  csgo_utils.py  logging_utils.py  lol_buddy.py  message_listener.py  music_player.py  reddit.py
